# fdry

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_CHART.md  MARKETING_NOTES.md  README.md  RUNBOOK.md  SHIP_NOW.md  SHIP_TODAY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.base.json
audit/: CLIENT_SIDE_AUDIT.md  README.md
bot/: package.json
docs/: .zigrep_archive  BOT_SPEC.md  CODE_ARCHITECTURE.md  CODE_STATUS.md  CONSISTENCY_CHECK.md  CYCLE2_READINESS.md  CYCLE_7_VERDICT.md  FAILURE_MODES.md  FRONTEND_SPEC.md  GIT_HYGIENE.md  HARNESS_VERDICT.md  LEGACY_STFDRY_REDEMPTION.md  PUBLIC_RELEASE_AUDIT_AND_PUSH.md  RANGER_VAULT_READY.md  README.md  REMEDIATION_DAG.md  REMEDIATION_INVENTORY.json  REVENUE_POLICY.md  SEED_MECHANISM_DECISION.md  SHIP.md  SHIP_ORDER_C3.md  SIGNAL_CONTRACT.md  SIGNAL_PIPELINE_PATCH.md  SPEC.md  STAKER_GUIDE.md  SYMMETRY.md  SYMMETRY_RAYDIUM_CPMM_ATTEMPT.md  TELEGRAM_DRAFTS.md  TELEGRAM_TRUTH_AUDIT.md  TRUTH_AUDIT.md  USER_DECISION_MEMO.md  VAULT_V1_SHIP_PLAN.md  VOLTR_RANGER_SETUP.md  backtest_final.json  fdry-pool.json  jupiter_routes_c5.json  oracles.json  pool.json  ranger-idl.json  ranger-vault.json  (+4 more)
frontend/: .zigrep_archive  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+1 more)
programs/fdry-gate/: Cargo.toml  README.md
programs/fdry-gate/src/: lib.rs
programs/fdry-jup-adaptor/: Cargo.toml
programs/fdry-jup-adaptor/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/fdry-jup-adaptor/src/instructions/: deposit_swap.rs  initialize_strategy.rs  mod.rs  withdraw_swap.rs
(+167 files in other folders)
