[package]
name = "fdry-gate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fdry_gate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap", "custom-panic"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
